# libhungarian

./: README
src/: CMakeLists.txt  mexFunction.def
src/bindings/: CMakeLists.txt
src/bindings/matlab/: CMakeLists.txt  hungarian.mexa64  hungarian_matlab.c
src/bindings/python/: CMakeLists.txt  _hungarian.c  setup.py  setup.py.old
src/libhungarian/: CMakeLists.txt  hungarian.c  hungarian_test.c  old.Makefile
src/utils/: CMakeLists.txt  gencsv.c  readcsv.c  readcsv.h  test.c
